--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.10.3",
+    "@dfinity/agent": "^0.18.1",
     "@dfinity/auth-client": "^0.15.7",
     "@dfinity/candid": "^0.15.1",
     "@dfinity/identity": "^0.15.1",
     "@dfinity/principal": "^0.15.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/cli": "^11.3.9",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "babel-plugin-module-resolver": "^5.0.0",
