--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "react-native-dotenv": "^3.4.2",
     "react-native-eject": "^0.2.0",
     "react-native-fetch-api": "^3.0.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "text-encoding": "^0.7.0"
   },
   "devDependencies": {
