--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.72.7",
     "react-native-dotenv": "^3.4.2",
     "react-native-eject": "^0.2.0",
+    "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-polyfill-globals": "^3.1.0",
